--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ nav {
     top: 0;
     width: 100%;
     background-color: #f1f1f1;
-    padding: 0;
 }
 
 nav ul {
@@ -28,6 +27,11 @@ nav li a {
     padding: 16px;
     text-decoration: none;
     color: #333;
+    font-size: 24px;
+}
+
+.rightAlign {
+    float: right;
 }
 
 nav li a:hover {
