made paralax captions possible

--- a/style.css
+++ b/style.css
@@ -52,4 +52,12 @@ nav li a:hover {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.caption{
+    background-color: greenyellow;
 }
