--- a/style.css
+++ b/style.css
@@ -1,41 +1,42 @@
-body{
-   background-color: white;
-   margin:0;
-   
+body {
+    background-color: white;
+    margin: 0;
 }
 
-body, html {
+
+.margincontainer {
+    margin: 8px;
+    /*height: 100%;*/ /*makes parralax work*/
+}
+
+body,
+html {
     height: 100%;
-  }
-  
-.parallax {
-/* The image used */
-background-image: url("images/potato.jpg");
-
-/* Full height */
-height: 100%;
-
-/* Create the parallax scrolling effect */
-background-attachment: fixed;
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
 }
 
-@media only screen and (max-device-width: 1366px) {
+.parallax {
+    /* The image used */
+    background-image: url("images/potato.jpg");
+
+    /* Full height */
+    height: 100%;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* @media only screen and (max-device-width: 1366px) {
     .parallax {
       background-attachment: scroll;
     }
-  }
-
-.margincontainer{
-    margin: 8px;
-}
+  } */
 
 
 nav {
-
-    position:fixed;
+    position: fixed;
     top: 0;
     width: 100%;
     background-color: #f1f1f1;
@@ -87,7 +88,7 @@ nav li a:hover {
 }
 
 .zoomItem {
-    padding-top:100px;
+    padding-top: 100px;
 }
 
 .proposal {
@@ -96,7 +97,7 @@ nav li a:hover {
     margin: auto;
     border-radius: 10px;
     width: 60%;
-    
+
 }
 
 .proposalRight {
@@ -105,8 +106,9 @@ nav li a:hover {
     padding: 10px;
     text-align: justify;
 }
+
 .proposalLeft {
-    width:45%;
+    width: 45%;
     display: inline-block;
     padding: 10px;
     text-align: justify;
@@ -120,9 +122,12 @@ nav li a:hover {
     padding: 16px;
     background: #a88a10;
     text-decoration: none;
-    border: none; /* Remove default border */
-    cursor: pointer; /* Add cursor pointer */
-    transition: background-color 0.3s ease; /* Add transition */
+    border: none;
+    /* Remove default border */
+    cursor: pointer;
+    /* Add cursor pointer */
+    transition: background-color 0.3s ease;
+    /* Add transition */
     margin: auto;
     align-self: center;
 }
@@ -134,6 +139,8 @@ nav li a:hover {
 
 .btn:focus,
 .btn:active {
-    outline: none; /* Remove default focus and active outlines */
-    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.5); /* Add custom focus styling */
+    outline: none;
+    /* Remove default focus and active outlines */
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.5);
+    /* Add custom focus styling */
 }
