--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 
 .margincontainer {
     margin: 8px;
@@ -112,7 +116,7 @@ nav li.active a {
     color: #fff;
     padding: 18px;
     font-size: 25px;
-    letter-spacing: 10px;
+    letter-spacing: 5px;
 }
 
 .zoomItem {
@@ -158,6 +162,7 @@ nav li.active a {
     /* Add transition */
     margin: auto;
     align-self: center;
+    position: relative;
 }
 
 .btn:hover {
@@ -171,4 +176,9 @@ nav li.active a {
     /* Remove default focus and active outlines */
     box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.5);
     /* Add custom focus styling */
+}
+
+.center {
+    margin-top: 20px;
+    text-align: center;
 }
