--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 
 footer{
     margin:8px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body,
@@ -115,6 +116,7 @@ nav li.active a {
 }
 
 .proposal {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #ffef92;
     padding: 20px;
     margin: auto;
@@ -137,8 +139,14 @@ nav li.active a {
 }
 
 .paragraph{
+    font-family: Arial, Helvetica, sans-serif;
     padding-top:50px;
     /* padding-bottom:50px; */
+}
+
+#survey{
+    margin-top: -50px;
+    padding-top: 70px;
 }
 
 .infographiccontainer{
