--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: white;
+    /* background-color: white; */
+    background-color: #fefbf6;
     margin: 0;
 }
 
@@ -8,7 +9,9 @@ html {
 }
 
 footer{
-    margin:8px;
+    margin-left: 8%;
+    margin-right: 8%;
+    padding-bottom: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -141,7 +144,19 @@ nav li.active a {
 .paragraph{
     font-family: Arial, Helvetica, sans-serif;
     padding-top:50px;
+    margin-left: 8%;
+    margin-right: 8%;
     /* padding-bottom:50px; */
+}
+
+.paragraph h3{
+    margin-top: 16px;
+    margin-bottom: 16px;
+    font-size: 2rem;
+}
+
+.paragraph p{
+    font-size: 1.25rem;
 }
 
 #survey{
