--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'montserrat'; /* this value can be anything you wish - it gets used in the class definition below */
+    src: url('Montserrat.woff'); /* add the file path to your font here */
+}
+
 body {
     /* background-color: white; */
     background-color: #fefbf6;
@@ -12,7 +17,7 @@ footer{
     margin-left: 8%;
     margin-right: 8%;
     padding-bottom: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: montserrat, Arial, Helvetica;
 }
 
 body,
@@ -110,7 +115,7 @@ nav li.active a {
     background-color: rgba(1,1,1,0.75); /*has transparent*/
     color: #fff;
     padding: 18px;
-    font-size: 25px;
+    font-size: 5rem;
     letter-spacing: 5px;
 }
 
@@ -142,7 +147,8 @@ nav li.active a {
 }
 
 .paragraph{
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family: montserrat, Arial, Helvetica;
     padding-top:50px;
     margin-left: 8%;
     margin-right: 8%;
@@ -153,6 +159,7 @@ nav li.active a {
     margin-top: 16px;
     margin-bottom: 16px;
     font-size: 2rem;
+    text-align: center;
 }
 
 .paragraph p{
@@ -166,8 +173,8 @@ nav li.active a {
 
 .infographiccontainer{
     padding:100px;
-    padding-left:100px;
-    padding-right:100px;
+    padding-left:10%;
+    padding-right:10%;
     padding-top:50px;
     padding-bottom:50px;
 }
