--- a/style.css
+++ b/style.css
@@ -172,9 +172,9 @@ nav li.active a {
 }
 
 .infographiccontainer{
-    padding:100px;
+    /* padding:100px;
     padding-left:10%;
-    padding-right:10%;
+    padding-right:10%; */
     padding-top:50px;
     padding-bottom:50px;
 }
