--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 @font-face {
-    font-family: 'montserrat'; /* this value can be anything you wish - it gets used in the class definition below */
-    src: url('Montserrat.woff'); /* add the file path to your font here */
+    font-family: 'montserrat';
+    src: url('Montserrat.woff');
 }
 
 body {
-    /* background-color: white; */
     background-color: #fefbf6;
     margin: 0;
 }
@@ -14,6 +13,7 @@ html {
 }
 
 footer{
+    padding-top: 20px;
     margin-left: 8%;
     margin-right: 8%;
     padding-bottom: 10px;
@@ -111,8 +111,7 @@ nav li.active a {
 }
 
 .caption span.border {
-    /* background-color: #111; */ /*no transparent*/
-    background-color: rgba(1,1,1,0.75); /*has transparent*/
+    background-color: rgba(1,1,1,0.75);
     color: #fff;
     padding: 18px;
     font-size: 5rem;
@@ -147,12 +146,10 @@ nav li.active a {
 }
 
 .paragraph{
-    /* font-family: Arial, Helvetica, sans-serif; */
     font-family: montserrat, Arial, Helvetica;
     padding-top:50px;
     margin-left: 8%;
     margin-right: 8%;
-    /* padding-bottom:50px; */
 }
 
 .paragraph h3{
@@ -172,11 +169,7 @@ nav li.active a {
 }
 
 .infographiccontainer{
-    /* padding:100px;
-    padding-left:10%;
-    padding-right:10%; */
     padding-top:50px;
-    padding-bottom:50px;
 }
 
 .infographic{
