changed proposal font

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ nav li.active a {
 }
 
 .proposal {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: montserrat, Arial, Helvetica;
     background-color: #ffef92;
     padding: 20px;
     margin: auto;
